Fix reason width on mobile

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -419,6 +419,7 @@ section {
 .reason {
   position: relative;
   display: flex;
+  width: 100%;
   flex-direction: column;
   justify-content: center;
   border-radius: 30px;
